<resources>
    <string name="app_name">Finance</string>
    <string name="msg_loading">Vui lòng chờ...</string>
    <string name="str_api_key">AIzaSyAQWUevZCTLaVd9a1Z2WEA2_e2gO9iW8rU</string>
    <string name="select">Select Item</string>
    <string name="newtwork_error">Không có kết nối internet, vui lòng kiểm tra kết nối của bạn.</string>
    <string name="newtwork_error_button_retry">Thử lại</string>
    <string name="newtwork_error_button_exit">Thoát</string>
    <string name="date_default">12/12/2020</string>
    <string name="money_default">10,000,000,000,000đ</string>
    <string name="money_default_min">0đ</string>
    <string name="number_default_min">0</string>
    <string name="number_default">10,000,000</string>
    <string name="blank"></string>
    <string name="kind_1">Thu</string>
    <string name="kind_2">Chi</string>
    <string name="state_1">Đã tạo</string>
    <string name="state_2">Chấp nhận</string>
    <string name="state_3">Đã hủy</string>
    <string name="state_4">Đã thanh toán</string>
    <string name="pending">Đang xử lý</string>
    <string name="done">Hoàn thành</string>
    <string name="login_title">Sign In</string>
    <string name="login_username_hint">Enter email or phone number</string>
    <string name="login_password_hint">Password</string>
    <string name="login_forgot_password">Recovery password</string>
    <string name="login_button_sign_in">Sign In</string>
    <string name="login_success">Login success!</string>
    <string name="login_error">Login error!</string>
    <string name="no_internet">Không có kết nối Internet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_str">Đăng nhập</string>
    <string name="introduce_app">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="register_str">Đăng ký</string>
    <string name="phone_str">Số điện thoại</string>
    <string name="default_date_year">Tháng 1/2024</string>
    <string name="category_management">Quản lý danh mục</string>
    <string name="department_management">Quản lý phòng ban</string>
    <string name="type">Loại</string>
    <string name="asterisk">*</string>
    <string name="group">Nhóm</string>
    <string name="name">Tên</string>
    <string name="input_name">Nhập tên</string>
    <string name="username">Tên đăng nhập</string>
    <string name="input_username">Nhập tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="change_password_2">Đổi mật khẩu</string>
    <string name="input_password">Nhập mật khẩu</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="input_phone_number">Nhập số điện thoại</string>
    <string name="server_host">Server host</string>
    <string name="server_port">Server port</string>
    <string name="private_key">Private key</string>
    <string name="save">Lưu</string>
    <string name="key_name_not_empty">Tên key không được để trống</string>
    <string name="invalid_host">Host không được để trống</string>
    <string name="invalid_port">Port không được để trống</string>
    <string name="invalid_private_key">Private key không được để trống</string>
    <string name="invalid_username">Tên đăng nhập không được để trống</string>
    <string name="invalid_password">Mật khẩu không được để trống</string>
    <string name="invalid_phone">Số điện thoại không được để trống</string>
    <string name="server">Server</string>
    <string name="google">Web</string>
    <string name="web">Web</string>
    <string name="key_management">Quản lí key</string>
    <string name="not_permission">Bạn không có quyền!</string>
    <string name="all_kind">Tất cả loại</string>
    <string name="all_group">Tất cả nhóm</string>
    <string name="sum">Tổng số:</string>
    <string name="transaction_group_management">Quản lí nhóm giao dịch</string>
    <string name="service_management">Quản lý dịch vụ</string>
    <string name="key_group_management">Quản lý nhóm key</string>
    <string name="request_key">Yêu cầu key</string>
    <string name="logout">Đăng xuất</string>
    <string name="save_file_success">Lưu file thành công!</string>
    <string name="collect">Thu</string>
    <string name="pay">Chi</string>
    <string name="category_type">Loại danh mục</string>
    <string name="category_name">Tên danh mục</string>
    <string name="input_category_name">Nhập tên danh mục</string>
    <string name="description">Mô tả</string>
    <string name="input_des">Nhập mô tả</string>
    <string name="department_name">Tên phòng ban</string>
    <string name="input_department_name">Nhập tên phòng ban</string>
    <string name="invalid_department_name">Tên phòng ban không được để trống</string>
    <string name="key_group_name">Tên key group</string>
    <string name="input_key_group_name">Nhập tên nhóm key </string>
    <string name="delete">Xóa</string>
    <string name="cancel">Hủy</string>
    <string name="please_enter_private_key">Vui lòng nhập key để tiếp tục</string>
    <string name="input_private_key">Nhập private key</string>
    <string name="confirm">Xác nhận</string>
    <string name="invalid_key_group_name">Tên key group không được để trống</string>
    <string name="add_new_category">Thêm danh mục mới</string>
    <string name="category_details">Chi tiết danh mục</string>
    <string name="library_access_denied">Quyền truy cập thư viện bị từ chối</string>
    <string name="camera_access_denied">Quyền truy cập camera bị từ chối</string>
    <string name="confirm_delete_department">Xác nhận xóa phòng ban này?</string>
    <string name="confirm_delete_category">Xác nhận xóa danh mục này?</string>
    <string name="add_new_department">Thêm phòng ban mới</string>
    <string name="department_details">Chi tiết phòng ban</string>
    <string name="add_new_key">Thêm key mới</string>
    <string name="update_key">Cập nhật key</string>
    <string name="add_new_key_group">Thêm key group mới</string>
    <string name="key_group_details">Chi tiết key group</string>
    <string name="copy_text">Sao chép văn bản</string>
    <string name="copy_text_success">Đã sao chép văn bản vào bản nhớ tạm</string>
    <string name="please_enter_text_to_copy">Vui lòng nhập văn bản để sao chép!</string>
    <string name="private_key_is_not_exactly">Private Key không chính xác!</string>
    <string name="key_details">Chi tiết key</string>
    <string name="confirm_delete_key">Xác nhận xóa key này?</string>
    <string name="select_group">Chọn nhóm</string>
    <string name="select_kind">Chọn loại</string>
    <string name="empty_key">Không có key nào</string>
    <string name="str_no_service">Bạn chưa tạo dịch vụ nào!</string>
    <string name="group_key">Nhóm</string>
    <string name="type_key">Loại</string>
    <string name="data_empty">Không có dữ liệu!</string>
    <string name="invalid_key">Key không hợp lệ!</string>
    <string name="enter_key_name">Nhập key cần tìm</string>
    <string name="menu_home">Trang chủ</string>
    <string name="menu_statistic">Thống kê</string>
    <string name="menu_key">Key</string>
    <string name="menu_account">Tài khoản</string>
    <string name="menu_notification">Thông báo</string>
    <string name="delete_all_notification">Xóa tất cả thông báo</string>
    <string name="read_all_notification">Đánh dấu tất cả đã đọc</string>
    <string name="confirm_delete_dialog">Xác nhận xóa thông báo này?</string>
    <string name="confirm_delete_all_notification">Xóa tất cả thông báo?</string>
    <string name="confirm_download_file">Xác nhận tải file</string>
    <string name="group_service_management">Quản lý nhóm dịch vụ</string>
    <string name="enter_transaction_name">Nhập tên giao dịch</string>
    <string name="enter_money">Nhập số tiền</string>
    <string name="enter_transaction_note">Nhập nội dung giao dịch</string>
    <string name="download_file">Tải tệp lên ở đây</string>
    <string name="pick_image">Tải ảnh lên ở đây</string>
    <string name="amount_of_money">Số tiền giao dịch</string>
    <string name="do_not_have_any_group_service">Bạn chưa tạo nhóm dịch vụ nào!</string>
    <string name="name_group_service">Tên nhóm dịch vụ</string>
    <string name="input_group_service">Nhập nhóm dịch vụ</string>
    <string name="do_not_have_any_group_transaction">Bạn chưa tạo nhóm giao dịch nào!</string>
    <string name="group_transaction_name">Tên nhóm giao dịch</string>
    <string name="input_group_transaction">Nhập nhóm giao dịch</string>
    <string name="input_username_login">Nhập tên tài khoản</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="login">Đăng nhập</string>
    <string name="question_out_app">Bạn có muốn thoát ứng dụng không?</string>
    <string name="notification">Thông báo</string>
    <string name="confirm_delete_transaction">Xác nhận xóa giao dịch này?</string>
    <string name="choose_file">Chọn file từ</string>
    <string name="transaction_kind">Loại giao dịch</string>
    <string name="pick_image_from">Chọn ảnh từ</string>
    <string name="logout_str">Đăng xuất</string>
    <string name="question_logout">Bạn muốn đăng xuất khỏi ứng dụng?</string>
    <string name="my_transactions">Các giao dịch của tôi</string>
    <string name="pls_wait">Vui lòng chờ...</string>
    <string name="do_not_have_any_data">Không có dữ liệu giao dịch</string>
    <string name="transaction_category">Danh mục giao dịch</string>
    <string name="group_transaction">Nhóm giao dịch</string>
    <string name="transaction_name">Tên giao dịch</string>
    <string name="transaction_name_2">Chi phí bảo trì hệ thống mạng </string>
    <string name="transaction_money">Số tiền (VND)</string>
    <string name="transaction_content">Nội dung giao dịch</string>
    <string name="document">Chứng từ</string>
    <string name="transaction_in_month">Giao dịch trong tháng</string>
    <string name="state">Trạng thái</string>
    <string name="time">Thời gian</string>
    <string name="category">Danh mục</string>
    <string name="content">Nội dung</string>
    <string name="create">Tạo</string>
    <string name="username_title">Tên tài khoản</string>
    <string name="fullname">Họ và tên</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="input_fullname">Nhập họ và tên</string>
    <string name="input_new_password">Nhập mật khẩu mới</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="input_old_password">Nhập mật khẩu cũ</string>
    <string name="update">Cập nhật</string>
    <string name="input_transaction_content">Nhập nội dung giao dịch</string>
    <string name="input_money">Nhập số tiền</string>
    <string name="input_transaction_name">Nhập tên giao dịch</string>
    <string name="exit">Thoát</string>
    <string name="library">File của bạn</string>
    <string name="camera">Camera</string>
    <string name="sum_money">Tổng tiền: </string>
    <string name="search_transaction_name">Tìm kiếm tên giao dịch</string>
    <string name="confirm_reject_transaction">Xác nhận từ chối giao dịch này?</string>
    <string name="reject">Từ chối</string>
    <string name="input_reason_reject">Nhập cụ thể lý do từ chối giao dịch</string>
    <string name="transaction">Giao dịch</string>
    <string name="text_remind_confirm_delete_transaction">Hành động xóa sẽ không hoàn tác được.\nBạn chắc chắn xóa giao dịch này?</string>
    <string name="input_email_reset_password">Nhập email khôi phục mật khẩu của bạn</string>
    <string name="input_your_email">Nhập email của bạn</string>
    <string name="note">Ghi chú</string>
    <string name="remove_transaction">Bỏ giao dịch ra khỏi kì thanh toán?</string>
    <string name="or">or</string>
    <string name="or_choose_from_gallery">Chọn từ bộ sưu tập</string>
    <string name="scan_qr_code_message">Quét mã QR</string>
</resources>