<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.finance.ui.password.forget.ForgetPasswordViewModel" />

        <variable name="a"
            type="com.finance.ui.password.forget.ForgetPasswordActivity" />

        <import type="android.text.TextUtils" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:background="@color/color_theme"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_login"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/_90sdp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:onClick="@{() -> a.hideKeyboard()}"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        />

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_7sdp"
                        android:text="@string/forgot_password"
                        style="@style/AppTextTitle"
                        android:textColor="@color/color_theme"
                        android:textSize="@dimen/_30ssp"
                        android:layout_marginTop="@dimen/_25sdp"
                        />

                    <TextView
                        android:id="@+id/tv_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_7sdp"
                        android:text="@string/input_email_reset_password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp"
                        android:fontFamily="@font/lato_bold"
                        android:layout_marginTop="@dimen/_7sdp"
                        />

                    <EditText
                        android:id="@+id/edit_username"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        style="@style/AppEditTextInfo"
                        android:hint="@string/input_your_email"
                        android:text="@={vm.email}"
                        android:focusable="true"
                        android:paddingEnd="@dimen/_7sdp"
                        android:paddingStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_7sdp"
                        android:textColorHint="#C0C0C0"
                        android:layout_marginHorizontal="@dimen/_7sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        />

                    <Button
                        android:id="@+id/btn_confirm"
                        style="@style/AppButtonStyle"
                        android:onClick="@{()->vm.forgetPassword()}"
                        android:text="@string/save"
                        android:layout_marginEnd="@dimen/_15sdp"
                        />

                </LinearLayout>
            </FrameLayout>

        </FrameLayout>

    </ScrollView>



</layout>